[package]
name = "kencho_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#                             #
# Tutorial of proconio::input #
#                             #

[[bin]]
name = "io1"
path = "src/proconio/ex_1.rs"

[[bin]]
name = "io2"
path = "src/proconio/ex_2.rs"

[[bin]]
name = "io3"
path = "src/proconio/ex_3.rs"

[[bin]]
name = "io4"
path = "src/proconio/ex_4.rs"

#     #
# ss3 # 
#     #

[[bin]]
name = "line_search"
path = "src/ss3/line_search.rs"

[[bin]]
name = "min_search"
path = "src/ss3/min_search.rs"

[[bin]]
name = "pair_sum"
path = "src/ss3/pair_sum.rs"

[[bin]]
name = "pair_sum_bit"
path = "src/ss3/pair_sum_bit.rs"

#     #
# ss4 #
#     #

[[bin]]
name = "sum_rec"
path = "src/ss4/sum_rec.rs"

[[bin]]
name = "gcd"
path = "src/ss4/gcd.rs"

[[bin]]
name = "fib"
path = "src/ss4/fib.rs"

[[bin]]
name = "fib_for"
path = "src/ss4/fib_for.rs"

[[bin]]
name = "fib_memo"
path = "src/ss4/fib_memo.rs"

[[bin]]
name = "pair_sum_rec"
path = "src/ss4/pair_sum.rs"

#     #
# ss5 #
#     #

[[bin]]
name = "frog"
path = "src/ss5/frog.rs"

[[bin]]
name = "frog_rec"
path = "src/ss5/frog_rec.rs"

[[bin]]
name = "knap"
path = "src/ss5/knapsack.rs"

# ss5/dp

[[bin]]
name = "ex_search"
path = "src/ss5/dp/ex_search.rs"

[[bin]]
name = "memo_search"
path = "src/ss5/dp/memo_search.rs"

[[bin]]
name = "memo_search_loop"
path = "src/ss5/dp/memo_search_loop.rs"

#     #
# ss6 #
#     #

[[bin]]
name = "bin_search"
path = "src/ss6/bin_search.rs"

[[bin]]
name = "bin_search_gen"
path = "src/ss6/bin_search_generic.rs"

[dependencies]
proconio = "0.4.5"
