[package]
name = "kencho_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#                             #
# Tutorial of proconio::input #
#                             #

[[bin]]
name = "io1"
path = "src/proconio/ex_1.rs"

[[bin]]
name = "io2"
path = "src/proconio/ex_2.rs"

[[bin]]
name = "io3"
path = "src/proconio/ex_3.rs"

[[bin]]
name = "io4"
path = "src/proconio/ex_4.rs"

#     #
# ss3 # 
#     #

[[bin]]
name = "line_search"
path = "src/ss3/line_search.rs"

[[bin]]
name = "min_search"
path = "src/ss3/min_search.rs"

[[bin]]
name = "pair_sum"
path = "src/ss3/pair_sum.rs"

[[bin]]
name = "pair_sum_bit"
path = "src/ss3/pair_sum_bit.rs"

#     #
# ss4 #
#     #

[[bin]]
name = "sum_rec"
path = "src/ss4/sum_rec.rs"

[[bin]]
name = "gcd"
path = "src/ss4/gcd.rs"

[[bin]]
name = "fib"
path = "src/ss4/fib.rs"

[[bin]]
name = "fib_for"
path = "src/ss4/fib_for.rs"

[[bin]]
name = "fib_memo"
path = "src/ss4/fib_memo.rs"

[[bin]]
name = "pair_sum_rec"
path = "src/ss4/pair_sum.rs"

#     #
# ss5 #
#     #

[[bin]]
name = "frog"
path = "src/ss5/frog.rs"

[[bin]]
name = "frog_rec"
path = "src/ss5/frog_rec.rs"

[[bin]]
name = "knap"
path = "src/ss5/knapsack.rs"

[[bin]]
name = "edit"
path = "src/ss5/edit.rs"

# ss5/dp

[[bin]]
name = "ex_search"
path = "src/ss5/dp/ex_search.rs"

[[bin]]
name = "memo_search"
path = "src/ss5/dp/memo_search.rs"

[[bin]]
name = "memo_search_loop"
path = "src/ss5/dp/memo_search_loop.rs"

#     #
# ss6 #
#     #

[[bin]]
name = "bin_search"
path = "src/ss6/bin_search.rs"

[[bin]]
name = "bin_search_gen"
path = "src/ss6/bin_search_generic.rs"

[[bin]]
name = "bin_method"
path = "src/ss6/bin_method.rs"

[[bin]]
name = "age"
path = "src/ss6/age.rs"

[[bin]]
name = "bin_search_pair"
path = "src/ss6/bin_search_pair.rs"

[[bin]]
name = "shooting_king"
path = "src/ss6/shooting_king.rs"

#     #
# ss7 #
   
[[bin]]
name = "greedy"
path = "src/ss7/greedy.rs"

#      #
# ss10 #
[[bin]]
name = "graph_1"
path = "src/ss10/graph_1.rs"

[[bin]]
name = "graph_2"
path = "src/ss10/graph_2.rs"

[[bin]]
name = "graph_w"
path = "src/ss10/graph_weight.rs"

[[bin]]
name = "heap"
path = "src/ss10/heap.rs"

#      #
# ss11 #
[[bin]]
name = "union_find"
path = "src/ss11/union_find.rs"

[[bin]]
name = "count_connected"
path = "src/ss11/count_connected.rs"

#      #
# ss13 #
[[bin]]
name = "bfs"
path = "src/ss13/bfs.rs"

[[bin]]
name = "bfs_all"
path = "src/ss13/bfs_all.rs"

[[bin]]
name = "dfs_rec"
path = "src/ss13/dfs_rec.rs"

[[bin]]
name = "bfs_dist"
path = "src/ss13/bfs_dist.rs"

[[bin]]
name = "dfs_st"
path = "src/ss13/dfs_st.rs"

[[bin]]
name = "bipair"
path = "src/ss13/bipair.rs"

[[bin]]
name = "topo"
path = "src/ss13/topo.rs"

[[bin]]
name = "search_tree"
path = "src/ss13/search_tree.rs"

[[bin]]
name = "dp_tree"
path = "src/ss13/dp_tree.rs"

#      #
# ss14 #
[[bin]]
name = "bellman_ford"
path = "src/ss14/bellman_ford.rs"

[[bin]]
name = "dijkstra_simple"
path = "src/ss14/dijkstra_simple.rs"

[[bin]]
name = "dijkstra_heap"
path = "src/ss14/dijkstra_heap.rs"

[[bin]]
name = "floyd_warshall"
path = "src/ss14/floyd_warshall.rs"

# ss14/appendix
[[bin]]
name = "heap0"
path = "src/ss14/appendix/heap_0.rs"

[[bin]]
name = "heap1"
path = "src/ss14/appendix/heap_1.rs"

[[bin]]
name = "heap2"
path = "src/ss14/appendix/heap_2.rs"

#      #
# ss15 #
[[bin]]
name = "kruskal"
path = "src/ss15/kruskal.rs"

# ss15/appendix
[[bin]]
name = "sort_vec0"
path = "src/ss15/appendix/sort_vec_0.rs"

[dependencies]
proconio = "0.4.5"
