[package]
name = "kencho_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#                             #
# Tutorial of proconio::input #
#                             #

[[bin]]
name = "io1"
path = "src/proconio/ex_1.rs"

[[bin]]
name = "io2"
path = "src/proconio/ex_2.rs"

[[bin]]
name = "io3"
path = "src/proconio/ex_3.rs"

[[bin]]
name = "io4"
path = "src/proconio/ex_4.rs"

#      #
# lldb # 
#      #

[[bin]]
name = "dbg_1"
path = "src/lldb/dbg_1.rs"


#     #
# ss3 # 
#     #

[[bin]]
name = "line_search"
path = "src/ss3/line_search.rs"

[[bin]]
name = "min_search"
path = "src/ss3/min_search.rs"

[[bin]]
name = "pair_sum"
path = "src/ss3/pair_sum.rs"

[[bin]]
name = "pair_sum_bit"
path = "src/ss3/pair_sum_bit.rs"

#     #
# ss4 #
#     #

[[bin]]
name = "sum_rec"
path = "src/ss4/sum_rec.rs"

[[bin]]
name = "gcd"
path = "src/ss4/gcd.rs"

[[bin]]
name = "fib"
path = "src/ss4/fib.rs"

[[bin]]
name = "fib_for"
path = "src/ss4/fib_for.rs"

[[bin]]
name = "fib_memo"
path = "src/ss4/fib_memo.rs"

[[bin]]
name = "pair_sum_rec"
path = "src/ss4/pair_sum.rs"

#     #
# ss5 #
#     #

[[bin]]
name = "frog"
path = "src/ss5/frog.rs"

[[bin]]
name = "frog_rec"
path = "src/ss5/frog_rec.rs"

[[bin]]
name = "knap"
path = "src/ss5/knapsack.rs"

[[bin]]
name = "edit"
path = "src/ss5/edit.rs"

# ss5/dp

[[bin]]
name = "ex_search"
path = "src/ss5/dp/ex_search.rs"

[[bin]]
name = "memo_search"
path = "src/ss5/dp/memo_search.rs"

[[bin]]
name = "memo_search_loop"
path = "src/ss5/dp/memo_search_loop.rs"

#     #
# ss6 #
#     #

[[bin]]
name = "bin_search"
path = "src/ss6/bin_search.rs"

[[bin]]
name = "bin_search_gen"
path = "src/ss6/bin_search_generic.rs"

[[bin]]
name = "bin_method"
path = "src/ss6/bin_method.rs"

[[bin]]
name = "age"
path = "src/ss6/age.rs"

[[bin]]
name = "bin_search_pair"
path = "src/ss6/bin_search_pair.rs"

[[bin]]
name = "shooting_king"
path = "src/ss6/shooting_king.rs"

#     #
# ss7 #
   
[[bin]]
name = "greedy"
path = "src/ss7/greedy.rs"

[[bin]]
name = "schedule"
path = "src/ss7/schedule.rs"

[[bin]]
name = "multiple_array"
path = "src/ss7/multiple_array.rs"


#     #
# ss8 #
[[bin]]
name = "array"
path = "src/ss8/array.rs"

[[bin]]
name = "linked_list_unsafe"
path = "src/ss8/linked_list_unsafe.rs"

[[bin]]
name = "bi_list_unsafe"
path = "src/ss8/bidirectional_list_unsafe.rs"

[[bin]]
name = "hash_map"
path = "src/ss8/hash_map.rs"


#     #
# ss9 #
[[bin]]
name = "stack"
path = "src/ss9/stack.rs"

[[bin]]
name = "que"
path = "src/ss9/que.rs"

## ss9章末問題 ##
[[bin]]
name = "p_9_2"
path = "src/ss9/problem/p_9_2.rs"

#      #
# ss10 #
[[bin]]
name = "graph_1"
path = "src/ss10/graph_1.rs"

[[bin]]
name = "graph_2"
path = "src/ss10/graph_2.rs"

[[bin]]
name = "graph_w"
path = "src/ss10/graph_weight.rs"

[[bin]]
name = "heap"
path = "src/ss10/heap.rs"

#      #
# ss11 #
[[bin]]
name = "union_find"
path = "src/ss11/union_find.rs"

[[bin]]
name = "uf_dbg"
path = "src/ss11/uf_dbg.rs"

[[bin]]
name = "count_connected"
path = "src/ss11/count_connected.rs"

#      #
# ss12 #
[[bin]]
name = "insert_sort"
path = "src/ss12/insert_sort.rs"

[[bin]]
name = "merge_sort"
path = "src/ss12/merge_sort.rs"

[[bin]]
name = "quick_sort"
path = "src/ss12/quick_sort.rs"

[[bin]]
name = "heap_sort"
path = "src/ss12/heap_sort.rs"

[[bin]]
name = "bucket_sort"
path = "src/ss12/bucket_sort.rs"

#      #
# ss13 #
[[bin]]
name = "bfs"
path = "src/ss13/bfs.rs"

[[bin]]
name = "bfs_all"
path = "src/ss13/bfs_all.rs"

[[bin]]
name = "dfs_rec"
path = "src/ss13/dfs_rec.rs"

[[bin]]
name = "bfs_dist"
path = "src/ss13/bfs_dist.rs"

[[bin]]
name = "dfs_st"
path = "src/ss13/dfs_st.rs"

[[bin]]
name = "bipair"
path = "src/ss13/bipair.rs"

[[bin]]
name = "topo"
path = "src/ss13/topo.rs"

[[bin]]
name = "search_tree"
path = "src/ss13/search_tree.rs"

[[bin]]
name = "dp_tree"
path = "src/ss13/dp_tree.rs"

#      #
# ss14 #
[[bin]]
name = "bellman_ford"
path = "src/ss14/bellman_ford.rs"

[[bin]]
name = "dijkstra_simple"
path = "src/ss14/dijkstra_simple.rs"

[[bin]]
name = "dijkstra_heap"
path = "src/ss14/dijkstra_heap.rs"

[[bin]]
name = "floyd_warshall"
path = "src/ss14/floyd_warshall.rs"

# ss14/appendix
[[bin]]
name = "heap0"
path = "src/ss14/appendix/heap_0.rs"

[[bin]]
name = "heap1"
path = "src/ss14/appendix/heap_1.rs"

[[bin]]
name = "heap2"
path = "src/ss14/appendix/heap_2.rs"

#      #
# ss15 #
[[bin]]
name = "kruskal"
path = "src/ss15/kruskal.rs"


# ss15/appendix
[[bin]]
name = "sort_vec0"
path = "src/ss15/appendix/sort_vec_0.rs"

#      #
# ss16 #
[[bin]]
name = "net_flow"
path = "src/ss16/net_flow.rs"

# ss16/appendix
[[bin]]
name = "borrow_mut"
path = "src/ss16/appendix/borrow_mut.rs"

[[bin]]
name = "borrow_mut2"
path = "src/ss16/appendix/borrow_mut2.rs"

[dependencies]
proconio = "0.4.5"
